# gpg-expire-warner

./: Cargo.toml  NEWS.md  README.md
.github/workflows/: build.yml
src/: error.rs  main.rs  util.rs
tests/: test.rs
