[package]
name = "gpg-expire-warner"
version = "0.1.2"
authors = ["Emil Lundberg <emil@emlun.se>"]
edition = "2018"
description = "Prints a warning when GPG keys are about to expire"
homepage = "https://github.com/emlun/gpg-expire-warner"
repository = "https://github.com/emlun/gpg-expire-warner"
readme = "README.md"
keywords = ["gpg", "warn", "expire"]
categories = ["command-line-utilities"]
license = "GPL-3.0-or-later"

[dependencies]
structopt = "0.2"
